# VirtualARM

app/: build.gradle
app/src/androidTest/java/com/swift/virtualarm/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/swift/virtualarm/: MainActivity.java  VirtualARM.java
app/src/main/native/: CMakeLists.txt  virtual_arm.cc  virtual_arm.h
app/src/main/native/asm/arm64/: assembler_a64.cc  assembler_a64.h  cpu_arm64.cc  cpu_arm64.h  fields_table.inl  instruction_aarch64.cc  instruction_aarch64.h  instruction_decode.cc  instruction_decode.h  instruction_fields.cc  instruction_fields.h  instruction_table.cc  instruction_table.h  instructions_table.inl  instructions_table_all.inl  instructions_table_spec.inl
app/src/main/native/asm/arm64/decodes/: decode_data_process_imm.cc  decode_load_and_store.cc  decode_system_branch.cc
app/src/main/native/asm/arm64/visitors/: decode_visitors.cc  decode_visitors.h
app/src/main/native/backend/arm64/: trampoline.S  trampoline_a64.cc  trampoline_a64.h
app/src/main/native/backend/ir/: interpreter_ir.cc  interpreter_ir.h
app/src/main/native/base/: bit_field.h  compiler.h  hash_table.cc  hash_table.h  marcos.cc  marcos.h  swap.h
app/src/main/native/block/: code_block.cc  code_find_table.cc  code_find_table.h  host_code_block.cpp  host_code_block.h
app/src/main/native/dbi/arm64/: context_new.cc  context_new.h  dbi_arm64.cc  dbi_arm64.h  dbi_context_arm64.cc  dbi_context_arm64.h  dbi_diskcache_loader.cc  dbi_diskcache_loader.h  dbi_jit_arm64.cc  dbi_jit_arm64.h  dbi_mmu_arm64.cpp  dbi_mmu_arm64.h  dbi_trampolines_arm64.cc  dbi_trampolines_arm64.h  dbi_visitor_arm64.cc  dbi_visitor_arm64.h
app/src/main/native/frontend/arm64/: assembler_a64.cc  assembler_a64.h  cpu_arm64.cc  cpu_arm64.h  fields_table.inl  instruction_aarch64.cc  instruction_aarch64.h  instruction_decode.cc  instruction_decode.h  instruction_fields.cc  instruction_fields.h  instruction_table.cc  instruction_table.h  instructions_table.inl  ir_adapter_a64.cc  ir_adapter_a64.h  ir_for_a64.cc  ir_for_a64.h  opcodes_ir_a64.inl  opcodes_table.inl
app/src/main/native/frontend/arm64/decodes/: decode_data_process_imm.cc  decode_load_and_store.cc  decode_system_branch.cc
app/src/main/native/frontend/ir/: argument_ir.cc  argument_ir.h  assembler_ir.cc  assembler_ir.h  block_ir.cc  block_ir.h  instruction_ir.cc  instruction_ir.h  instructions_ir.cc  instructions_ir.h  opcode_ir.cc  opcode_ir.h  opcodes_ir.inl
app/src/main/native/includes/: code_block.h  cpu.h  dbi.h  entry_point.h  instruction.h  memory.h
app/src/main/native/instruction/: instruction.cc
app/src/main/native/memory/: mmu.cc  mmu.h  tlb.cc  tlb.h
app/src/main/native/mmu/: page_table.cc  page_table.h  tlb.cc  tlb.h
app/src/test/java/com/swift/virtualarm/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
